# Resume-Matcher-API

./: .gitignore  README.md  pyproject.toml
resumematcherapi/: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
resumematcherapi/api/: serializers.py  urls.py  views.py
resumematcherapi/api/aiscripts/: __init__.py  job_rubric_generator.py  resume_parser.py  resume_scorer.py
resumematcherapi/core/: models.py
resumematcherapi/core/migrations/: 0001_initial.py  0002_remove_candidate_rubric_score_candidate_resume_score_and_more.py  0003_candidate_resume_score_description_and_more.py  0004_job_date_created_job_priority_and_more.py  0005_job_location.py  0006_candidate_raw_resume.py  0007_remove_candidate_raw_resume_alter_candidate_resume.py  0008_candidate_raw_resume_alter_candidate_resume.py
resumematcherapi/resumematcher/: asgi.py  settings.py  urls.py  wsgi.py
resumematcherapi/resumematcherapi/: asgi.py  settings.py  urls.py
resumematcherapi/resumes/New folder/: New Text Document.txt
