[tool.poetry]
name = "resume-matcher-api"
version = "0.1.0"
description = ""
authors = ["Atmartushev <atmartushev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
